[package]
name = "yewstrap"
version = "0.1.0"
authors = ["Grzegorz Morzycki <gmorzycki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/jstarry/yew", branch = "component-children" }